style: fix issue where the title and url input boxes look too much to the left

--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -119,10 +119,6 @@
     text-align: left;
   }
 
-  .form .input {
-    margin-left: -1rem;
-  }
-
   .keywords,
   #keywords,
   #datesAccessed,
